feat: add fetch email logs API
